--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@nextui-org/theme": "^2.2.6",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.12",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0"
   },
